# Vitore

./: .gitignore  Makefile  README.md  meson.build
include/: shader.hpp  shader_binary.hpp  unique_handle.hpp
shaders/: shader.frag  shader.vert
src/: main.cpp  shader.cpp  shader_binary.cpp
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
